* Update locales. * Code improvements.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.0.4) stable; urgency=low
 
+  * Update locales.
   * Adapt WebGUI to Sencha ExtJS 5.
   * Introduce network interface backend API.
   * Mantis 0000022: Support VLAN.
