--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 14:51+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
+"POT-Creation-Date: 2015-04-18 01:40+0200\n"
+"PO-Revision-Date: 2015-04-17 23:41+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -197,8 +197,11 @@ msgstr "Aktiver S.M.A.R.T. overvågning."
 msgid "Add"
 msgstr "Tilføj"
 
-msgid "Add bonded interface"
-msgstr "Tilføj bundet interface"
+msgid "Add VLAN interface"
+msgstr ""
+
+msgid "Add bond interface"
+msgstr ""
 
 msgid "Add devices to RAID device"
 msgstr "Tilføj enheder til RAID enhed"
@@ -492,6 +495,9 @@ msgstr "Blokstørrelse"
 msgid "Bolivia"
 msgstr "Bolivia"
 
+msgid "Bond"
+msgstr ""
+
 msgid "Bond options"
 msgstr "Bunden valgmuligheder"
 
@@ -762,11 +768,8 @@ msgstr "Czech Republic"
 msgid "DHCP"
 msgstr "DHCP"
 
-msgid "DNS Server"
-msgstr "DNS Server"
-
-msgid "DNS server"
-msgstr "DNS server"
+msgid "DNS servers"
+msgstr ""
 
 msgid "Daemon"
 msgstr "Dæmon"
@@ -938,9 +941,6 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Er du sikker på at du vil slette den delte mappes indhold? Det vil blive permanent fjernet og kan ikke genskabes."
 
-msgid "Do you really want to remove this widget?"
-msgstr "Er du sikker på, at du vil slette denne widget?"
-
 msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
 msgstr "Er du sikker på at du vil resette WebGUI tilstanden, d.v.s gitter kolonne ordnen?"
 
@@ -1018,8 +1018,14 @@ msgstr "Rediger"
 msgid "Edit SSL certificate"
 msgstr "Rediger SSL certifikat"
 
-msgid "Edit bonded interface"
-msgstr "Rediger bundet interface"
+msgid "Edit VLAN interface"
+msgstr ""
+
+msgid "Edit bond interface"
+msgstr ""
+
+msgid "Edit ethernet interface"
+msgstr ""
 
 msgid "Edit firewall rule"
 msgstr "Rediger firewall regl"
@@ -1029,9 +1035,6 @@ msgstr "Rediger gruppe"
 
 msgid "Edit module"
 msgstr "Rediger modul"
-
-msgid "Edit physical interface"
-msgstr "Rediger fysisk interface"
 
 msgid "Edit quota"
 msgstr "Rediger kvote"
@@ -1252,6 +1255,9 @@ msgstr "Lykkedes ikke at hente liste over grupper."
 
 msgid "Failed to get list of network interface devices"
 msgstr "Lykkedes ikke at hente liste over netværks interface enheder"
+
+msgid "Failed to get list of unused network interface devices"
+msgstr ""
 
 msgid "Failed to get list of users."
 msgstr "Lykkedes ikke at hente liste over brugere."
@@ -1660,8 +1666,8 @@ msgstr "Ugyldig filsystem label"
 msgid "Invalid group name"
 msgstr "Ugyldig gruppenavn"
 
-msgid "Invalid hostname"
-msgstr "Ugyldig værtsnavn"
+msgid "Invalid host name"
+msgstr ""
 
 msgid "Invalid line: %s"
 msgstr "Ugyldig linie: %s"
@@ -2275,6 +2281,9 @@ msgstr "Papua New Guinea"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent interface"
+msgstr ""
+
 msgid "Passive FTP"
 msgstr "Passiv FTP"
 
@@ -2386,6 +2395,11 @@ msgstr "Vælg en metode til rydning af enheden eller tryk 'Annuller' for at afbr
 
 msgid "Please first select a volume."
 msgstr "Vælg venligst først et drev."
+
+msgid ""
+"Please make sure that the shared folder is publicly writable if new files "
+"are allowed."
+msgstr ""
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2521,6 +2535,12 @@ msgstr "Kvote"
 msgid "RAID 10"
 msgstr "RAID 10"
 
+msgid "RAID 2"
+msgstr ""
+
+msgid "RAID 3"
+msgstr ""
+
 msgid "RAID 4"
 msgstr "RAID 4"
 
@@ -2604,6 +2624,9 @@ msgstr "Ekstern syslog"
 
 msgid "Remove"
 msgstr "Fjern"
+
+msgid "Remove devices from RAID device"
+msgstr ""
 
 msgid "Replace"
 msgstr "Erstat"
@@ -2785,8 +2808,8 @@ msgstr "Planlagte tests"
 msgid "Scheduling"
 msgstr "Planlægning"
 
-msgid "Secondary"
-msgstr "Sekundær"
+msgid "Search domains"
+msgstr ""
 
 msgid "Secondary email"
 msgstr "Sekundær email"
@@ -2830,8 +2853,11 @@ msgstr "Vælg et gruppenavn ..."
 msgid "Select a language ..."
 msgstr "Vælg et sprog ..."
 
-msgid "Select a primary device ..."
-msgstr "Vælg en primær enhed ..."
+msgid "Select a parent interface ..."
+msgstr ""
+
+msgid "Select a primary interface ..."
+msgstr ""
 
 msgid "Select a protocol ..."
 msgstr "Vælg en protokol ..."
@@ -2850,6 +2876,9 @@ msgstr "Vælg et drev ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Vælg enheder, der skal tilføjes til RAID enheden"
+
+msgid "Select devices to be removed from the RAID device."
+msgstr ""
 
 msgid "Select or enter a user name ..."
 msgstr "Vælg eller indtast et brugenavn ..."
@@ -3099,6 +3128,9 @@ msgstr "Angiver overvågning af systemets status og vælger det mest hensigtsmæ
 msgid "Specifies which slave is the primary device."
 msgstr "Angiver hvilken slave der er den primære enhed."
 
+msgid "Speed"
+msgstr ""
+
 msgid "Spindown time"
 msgstr "Spindown tid"
 
@@ -3290,6 +3322,9 @@ msgstr "Placering af brugerens hjemme biblioteker."
 msgid "The name of the share."
 msgstr "Navnet på delingen."
 
+msgid "The name servers are used to look up host names on the network."
+msgstr ""
+
 msgid "The number of days the certificate is valid for."
 msgstr "Antal dage certifikatet er gyldig i."
 
@@ -3405,23 +3440,28 @@ msgstr "Dette felt skal være en IPv4 netværks adresse i CIDR betegnelse"
 msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "Dette felt skal være en IPv6 netværks adresse i CIDR betegnelse"
 
-msgid "This field should be a domainname or an IP address"
-msgstr "Dette felt skal være et domænenavn eller en IP adresse"
+msgid "This field should be a domain name or an IP address"
+msgstr ""
 
-msgid "This field should be a domainname or an IPv4 address"
-msgstr "Dette felt skal være et domænenavn eller en IPv4 adresse"
+msgid "This field should be a domain name or an IPv4 address"
+msgstr ""
 
-msgid "This field should be a hostname or an IP address"
-msgstr "Dette felt skal være et værtsnavn eller en IP adresse"
+msgid "This field should be a host name or an IP address"
+msgstr ""
 
-msgid "This field should be a hostname or an IPv4 address"
-msgstr "Dette felt skal være et værtsnavn eller en IPv4 adresse"
+msgid "This field should be a host name or an IPv4 address"
+msgstr ""
 
-msgid "This field should be a list of domainnames or IP addresses"
-msgstr "Dette felt skal være en liste af domænenavne eller IP adresser"
+msgid "This field should be a list of domain names or IP addresses"
+msgstr ""
 
-msgid "This field should be a list of hostnames or IP addresses"
-msgstr "Dette felt skal være en liste af værtsnavne eller IP adresser"
+msgid ""
+"This field should be a list of domain names or IP addresses seperated by <,>"
+" or <;>"
+msgstr ""
+
+msgid "This field should be a list of host names or IP addresses"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3814,6 +3854,12 @@ msgstr "Brugere"
 
 msgid "Uzbekistan"
 msgstr "Uzbekistan"
+
+msgid "VLAN"
+msgstr ""
+
+msgid "VLAN id"
+msgstr ""
 
 msgid "Valid to"
 msgstr "Gyldig til"
