--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-07 21:40+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2015-04-18 01:40+0200\n"
+"PO-Revision-Date: 2015-04-17 23:41+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -200,8 +200,11 @@ msgstr "Activar monitorizacion S.M.A.R.T."
 msgid "Add"
 msgstr "Añadir"
 
-msgid "Add bonded interface"
-msgstr "Añadir interfaz enlazada"
+msgid "Add VLAN interface"
+msgstr ""
+
+msgid "Add bond interface"
+msgstr ""
 
 msgid "Add devices to RAID device"
 msgstr "Añadir dispositivos al RAID"
@@ -495,6 +498,9 @@ msgstr "Tamaño de bloque"
 msgid "Bolivia"
 msgstr "Bolivia"
 
+msgid "Bond"
+msgstr ""
+
 msgid "Bond options"
 msgstr "Opciones de vinculación"
 
@@ -765,11 +771,8 @@ msgstr "República Checa"
 msgid "DHCP"
 msgstr "DHCP"
 
-msgid "DNS Server"
-msgstr "Servidor DNS"
-
-msgid "DNS server"
-msgstr "Servidor DNS"
+msgid "DNS servers"
+msgstr ""
 
 msgid "Daemon"
 msgstr "Demonio"
@@ -941,9 +944,6 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "¿Seguro que quiere eliminar el contenido de la carpeta compartida?. Se borrará permanentemente y no se podrá recuperar."
 
-msgid "Do you really want to remove this widget?"
-msgstr "¿Realmente desea borrar este widget?"
-
 msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
 msgstr "¿Seguro que desea reiniciar la WebGUI?, Ej: el orden de las columnas"
 
@@ -1021,8 +1021,14 @@ msgstr "Editar"
 msgid "Edit SSL certificate"
 msgstr "Editar certificado SSL"
 
-msgid "Edit bonded interface"
-msgstr "Editar interfaz acoplada"
+msgid "Edit VLAN interface"
+msgstr ""
+
+msgid "Edit bond interface"
+msgstr ""
+
+msgid "Edit ethernet interface"
+msgstr ""
 
 msgid "Edit firewall rule"
 msgstr " Editar reglas del Firewall"
@@ -1032,9 +1038,6 @@ msgstr "Editar grupo"
 
 msgid "Edit module"
 msgstr "Editar módulo"
-
-msgid "Edit physical interface"
-msgstr "Editar interfaz física"
 
 msgid "Edit quota"
 msgstr "Editar cuota"
@@ -1255,6 +1258,9 @@ msgstr "Fallo al obtener la lista de grupos."
 
 msgid "Failed to get list of network interface devices"
 msgstr "Falló al obtener la lista de los dispositivos de red"
+
+msgid "Failed to get list of unused network interface devices"
+msgstr ""
 
 msgid "Failed to get list of users."
 msgstr "Fallo al obtener la lista de usuarios."
@@ -1663,8 +1669,8 @@ msgstr "Etiqueta de sistema de Archivos inválida."
 msgid "Invalid group name"
 msgstr "Nombre de grupo inválido"
 
-msgid "Invalid hostname"
-msgstr "Nombre de host inválido."
+msgid "Invalid host name"
+msgstr ""
 
 msgid "Invalid line: %s"
 msgstr "Línea inválida: %s"
@@ -2278,6 +2284,9 @@ msgstr "Papua y nueva Guinea"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent interface"
+msgstr ""
+
 msgid "Passive FTP"
 msgstr "FTP Pasivo"
 
@@ -2389,6 +2398,11 @@ msgstr "Por favor elija el metodo para borrar el dispositivo o pulse 'Cancelar' 
 
 msgid "Please first select a volume."
 msgstr "Seleccione primero un volumen"
+
+msgid ""
+"Please make sure that the shared folder is publicly writable if new files "
+"are allowed."
+msgstr ""
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2524,6 +2538,12 @@ msgstr "Cuota"
 msgid "RAID 10"
 msgstr "RAID 10"
 
+msgid "RAID 2"
+msgstr ""
+
+msgid "RAID 3"
+msgstr ""
+
 msgid "RAID 4"
 msgstr "RAID 4"
 
@@ -2607,6 +2627,9 @@ msgstr "SysLog Remoto"
 
 msgid "Remove"
 msgstr "Eliminar"
+
+msgid "Remove devices from RAID device"
+msgstr ""
 
 msgid "Replace"
 msgstr "Reemplazar"
@@ -2788,8 +2811,8 @@ msgstr "Pruebas programadas"
 msgid "Scheduling"
 msgstr "programación"
 
-msgid "Secondary"
-msgstr "Secundario"
+msgid "Search domains"
+msgstr ""
 
 msgid "Secondary email"
 msgstr "E-mail secundario"
@@ -2833,8 +2856,11 @@ msgstr "Seleccione un nombre de grupo ..."
 msgid "Select a language ..."
 msgstr "Seleccione un idioma ..."
 
-msgid "Select a primary device ..."
-msgstr "Seleccionar un dispositivo primario ..."
+msgid "Select a parent interface ..."
+msgstr ""
+
+msgid "Select a primary interface ..."
+msgstr ""
 
 msgid "Select a protocol ..."
 msgstr "Seleccionar un protocolo ..."
@@ -2853,6 +2879,9 @@ msgstr "Seleccionar un volumen ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Seleccionar dispositivos a añadir al RAID"
+
+msgid "Select devices to be removed from the RAID device."
+msgstr ""
 
 msgid "Select or enter a user name ..."
 msgstr "Seleccione o escriba un nombre de usuario ..."
@@ -3102,6 +3131,9 @@ msgstr "Especifica si se monitoriza el estado del sistema y selecciona el nivel 
 msgid "Specifies which slave is the primary device."
 msgstr "Especifica qué esclavo es el dispositivo primario."
 
+msgid "Speed"
+msgstr ""
+
 msgid "Spindown time"
 msgstr "Tiempo para detener el disco"
 
@@ -3293,6 +3325,9 @@ msgstr "La ubicación de los directorios home de los usuarios"
 msgid "The name of the share."
 msgstr "El nombre del compartido"
 
+msgid "The name servers are used to look up host names on the network."
+msgstr ""
+
 msgid "The number of days the certificate is valid for."
 msgstr "El número de días de validez del certificado."
 
@@ -3408,23 +3443,28 @@ msgstr "Debería ser una dirección de red IPv4 en notación CIDR."
 msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "Debería ser una dirección de red IPv46en notación CIDR."
 
-msgid "This field should be a domainname or an IP address"
-msgstr "Este campo debe ser un nombre de dominio o una dirección IPv4 vàlida"
+msgid "This field should be a domain name or an IP address"
+msgstr ""
 
-msgid "This field should be a domainname or an IPv4 address"
-msgstr "Este campo debe ser un nombre de dominio o una dirección IPv4 vàlida"
+msgid "This field should be a domain name or an IPv4 address"
+msgstr ""
 
-msgid "This field should be a hostname or an IP address"
-msgstr "Debería ser un nombre de host o una dirección IPv4."
+msgid "This field should be a host name or an IP address"
+msgstr ""
 
-msgid "This field should be a hostname or an IPv4 address"
-msgstr "Debería ser un nombre de host o una dirección IPv4."
+msgid "This field should be a host name or an IPv4 address"
+msgstr ""
 
-msgid "This field should be a list of domainnames or IP addresses"
-msgstr "Este campo debe ser una lista de hostnames o una dirección IP vàlida"
+msgid "This field should be a list of domain names or IP addresses"
+msgstr ""
 
-msgid "This field should be a list of hostnames or IP addresses"
-msgstr "Este campo debe ser una lista de hostnames o una dirección IP vàlida"
+msgid ""
+"This field should be a list of domain names or IP addresses seperated by <,>"
+" or <;>"
+msgstr ""
+
+msgid "This field should be a list of host names or IP addresses"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3817,6 +3857,12 @@ msgstr "Usuarios"
 
 msgid "Uzbekistan"
 msgstr "Uzbekistán"
+
+msgid "VLAN"
+msgstr ""
+
+msgid "VLAN id"
+msgstr ""
 
 msgid "Valid to"
 msgstr "Válido hasta"
